[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Cerbos Developers", email = "help@cerbos.dev"},
]
dependencies = [
    "cerbos>=0.4.1",
    "fastapi>=0.86.0",
    "uvicorn>=0.19.0",
    "stytch>=5.15.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.5",
    "starlette>=0.20.4",
    "itsdangerous>=2.1.2",
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "black>=22.10.0",
    "isort>=5.10.1",
]

[tool.pdm.scripts]
test = "pytest"
lint = "black ."
sort = "isort ."
format = {composite = ["lint", "sort"]}
demo = "python main.py"

[tool.isort]
profile = 'black'
